key_watcher helper class

--- a/everything/screensave/index.html
+++ b/everything/screensave/index.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="index.js" defer></script>
     <script type="text/javascript" src="matrix.js" defer></script>
     <script type="text/javascript" src="weather.js" defer></script>
+    <script type="text/javascript" src="links.js" defer></script>
     <style>
      
     </style>
@@ -38,13 +39,14 @@
           </div>
         </div>
       </div>
-      <div class="krawatte">
+      <!-- <div class="krawatte">
         <img src="knoten-kleiner-windsorknoten.gif" alt="" />
-      </div>
+      </div> -->
       <div class="matrix">
         <canvas></canvas>
       </div>
       <div class="news"></div>
+      <div class="links"></div>
     </div>
   </body>
 </html>
