splitting of main file

--- a/everything/screensave/index.html
+++ b/everything/screensave/index.html
@@ -18,8 +18,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <script type="text/javascript" src="index.js" defer></script>
-    <script type="text/javascript" src="matrix.js" defer></script>
-    <script type="text/javascript" src="weather.js" defer></script>
+    <script type="text/javascript" src="game.js" defer></script>
+    <script type="text/javascript" src="weather_news_shedule.js" defer></script>
     <script type="text/javascript" src="links.js" defer></script>
     <style>
      
@@ -29,7 +29,7 @@
   <body>
     <div class="grid-container main">
       <div class="weather">
-        <h1>Wetter in Wittlich</h1>
+        <h1></h1>
         <div class="grid-container">
           <h2 id="temp">Temperatur:</h2>
           <h2 id="humidity">Luftfeuchtigkeit:</h2>
@@ -42,7 +42,7 @@
       <!-- <div class="krawatte">
         <img src="knoten-kleiner-windsorknoten.gif" alt="" />
       </div> -->
-      <div class="matrix">
+      <div class="game">
         <canvas></canvas>
       </div>
       <div class="news"></div>
